[build-system]
requires = [
  "setuptools>=61.2",
  "setuptools-scm[toml]>=6.2.3",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-ydist"
requires-python = ">=3.8"
dependencies = [
    'pytest==8.3.2',
]
dynamic = ["version"]

[project.entry-points.pytest11]
ydist = "ydist.plugin"

[tool.setuptools_scm]
write_to = "src/ydist/_version.py"
